# research-assistant

./: .gitignore  README.md  parsed_paper_metadata.csv  parsed_paper_sections.csv  parsed_paper_tables.csv  pyproject.toml  rag_result.json  search_results.json  system_prompt.txt
data_debug/: debug_docling_document.json  paper_chunks.csv  paper_chunks_2.csv  parsed_sections.csv  parsed_tables.csv
src/: app.py  config.py  converted_document.txt  dependencies.py  exceptions.py  main.py  parsed_pdf_content.csv  parsed_pdf_pages.csv  parsed_pdf_section.csv  parsed_pdf_tables.csv  parsed_sections.csv  test.py
src/routers/: rag_router.py
src/schemas/arxiv/: models.py
src/schemas/indexing/: indexing_models.py
src/schemas/parser/: models.py  parser_models.py
src/schemas/rag/: __init__.py  rag_models.py
src/services/arxiv_service/: arxiv_client.py  instance.py
src/services/embedding_service/: instance.py  jina_client.py
src/services/indexing/: indexer.py
src/services/indexing_service/: chunker.py  indexer.py  instance.py
src/services/llm_service/: groq_client.py  instance.py  prompt.py
src/services/opensearch_service/: index_config.py  instance.py  opensearch_client.py  query_builder.py
src/services/parser_service/: docling_parser.py  instance.py  parser.py
