[project]
name = "research-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Nguyen Anh",email = "tuananh835.nta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "research_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
